--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "build": "CI=false && react-scripts build"
+    "build": "react-scripts build"
   },
   "eslintConfig": {
     "extends": [
